[package]
name = "opuza"
version = "0.1.2"
description = "File server that accepts Lightning Network payments for downloads"
authors = ["Casey Rodarmor <casey@rodarmor.com>", "Sönke Hahn <soenkehahn@gmail.com>"]
license = "CC0-1.0"
edition = "2018"
repository = "https://github.com/refring/opuza"
homepage = "https://github.com/refring/opuza"

[workspace]
members = [".", "opuza-monero-client", "opuza-test-context", "bin/prerelease", "bin/publish", "lnd-test-context"]

[dependencies]
color-backtrace = "0.7.0"
env_logger = "0.11.6"
form_urlencoded = "1.2.1"
futures = "0.3.31"
hex = "0.4.3"
http = "1.2.0"
lexiclean = "0.0.1"
log = "0.4.25"
maud = "0.27.0"
mime_guess = "2.0.5"
openssl = "0.10.70"
percent-encoding = "2.3.1"
pin-project = "1.1.9"
pulldown-cmark = "0.12.2"
qrcodegen = "1.8.0"
rust-embed = "8.5.0"
rustls-acme = "0.12.1"
serde_yaml = "0.9.33"
termcolor = "1.4.1"
tokio-rustls = "0.26.1"

[dependencies.opuza-monero-client]
path = "opuza-monero-client"
version = "0.0.3"

[dependencies.hyper]
version = "0.14.32"
features = ["server", "stream", "tcp", "http1", "http2"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.snafu]
version = "0.6.10"
features = ["backtraces-impl-backtrace-crate"]

[dependencies.clap]
version = "4.5.28"
features = ["derive","wrap_help", "cargo"]

[dependencies.tokio]
version = "1.43.0"
features = ["rt", "rt-multi-thread", "macros", "fs", "time"]

[dependencies.tokio-stream]
version = "0.1.7"
features = ["net"]

[dependencies.tokio-util]
version = "0.7.8"
features = ["compat"]

[dependencies.tower]
version = "0.5.2"
features = ["make"]

[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
bardecoder = "0.5.0"
chromiumoxide = "0.3.1"
executable-path = "1.0.0"
guard = "0.5.1"
image = "0.25.5"
nix = "0.23.0"
pretty_assertions = "1.4.1"
regex = "1.11.1"
resvg = "0.44.0"
scraper = "0.12.0"
tempfile = "3.16.0"
tiny-skia = "0.11.4"
unindent = "0.2.3"
usvg = "0.44.0"

[dev-dependencies.opuza-test-context]
path = "opuza-test-context"

[dev-dependencies.lnd-test-context]
path = "lnd-test-context"

[dev-dependencies.rcgen]
version = "0.12.0"
features = ["x509-parser"]

[dev-dependencies.reqwest]
version = "0.11.3"
features = ["blocking", "stream", "rustls-tls"]
default-features = false

[features]
slow-tests = []
