[package]
name = "opuza-monero-client"
version = "0.0.3"
description = "Opuza Monero client library"
authors = ["refactor-ring <refactor_ring0@proton.me>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/refactor-ring/opuza"
homepage = "https://github.com/refactor-ring/opuza"

[lib]
doctest = false

[dependencies]
hex = "0.4.3"
http = "0.2.4"
hyper = "0.14.9"
hyper-openssl = "0.9.1"
num-format = "0.4.0"
prost = "0.8.0"
regex = "1.5.4"
tonic = "0.5.2"
tower = "0.4.8"
async-trait = "0.1.53"
dyn-clone = "1.0.5"
monero-rpc = { git = "https://github.com/refactor-ring/monero-rpc-rs", branch = "rpc-client-builder-merged" }
monero = "0.18"
serde_json = "1"

[dependencies.openssl]
version = "0.10.35"
features = ["vendored"]

[dependencies.serde]
version = "1.0.127"
features = ["derive"]

[dev-dependencies]
lnd-test-context = { path = "../lnd-test-context" }
pretty_assertions = "0.7.2"
serde_yaml = "0.8.17"

[dev-dependencies.tokio]
version = "1.7.1"
features = ["parking_lot"]

[build-dependencies]
tonic-build = "0.5.2"
